...
        var id: Self { self }

        var title: String {
            switch self {
            case .select: "Select"
            case .background: "Background"
            case .shadow: "Shadow"
            case .edges: "Edges"
            }
        }

        var systemImage: String {
            switch self {
...
